package edu.northeastern.csye6200.entity;

abstract class Base {
    protected int id;
}
